# vscode-python-course

./: .gitignore  README.md
demo-code/01-course-overview/: README.md
demo-code/03-exploring-the-editor/: README.md
demo-code/04-editing-code/: README.md  demo  python.json
demo-code/05-managing-your-environments/: pyproject.toml
demo-code/05-managing-your-environments/podcastapi/: __main__.py
demo-code/05-managing-your-environments/podcastapi/data/: __init__.py
demo-code/05-managing-your-environments/podcastapi/routers/: categories_router.py  shows_router.py  status_router.py
demo-code/06-running-and-debugging/: pyproject.toml  requirements.txt  sample.http
demo-code/06-running-and-debugging/podcastapi/: __main__.py  logging.py
demo-code/06-running-and-debugging/podcastapi/data/: __init__.py
demo-code/06-running-and-debugging/podcastapi/routers/: categories_router.py  shows_router.py  status_router.py
demo-code/07-testing-code/: README.md  pyproject.toml  sampledata.json
demo-code/07-testing-code/podcastapi/: __main__.py  api.py
demo-code/07-testing-code/podcastapi/routers/: categories_router.py  shows_router.py  status_router.py
demo-code/07-testing-code/tests/: test_categories_router.py  test_status_router.py
demo-code/08-source-control-git/: pyproject.toml  requirements.piptools  requirements.txt  sample.http
demo-code/08-source-control-git/podcastapi/: __main__.py  custom_logging.py  logging.py
demo-code/08-source-control-git/podcastapi/data/: __init__.py
demo-code/08-source-control-git/podcastapi/routers/: categories_router.py  status_router.py
demo-code/base/: README.md  pyproject.toml  requirements.piptools  requirements.txt  sampledata.json
demo-code/base/podcastapi/: __main__.py
demo-code/base/podcastapi/data/: __init__.py
demo-code/base/podcastapi/routers/: categories_router.py  shows_router.py
