[tool.poetry]
name = "podcastapi"
version = "0.1.0"
description = ""
authors = ["Cecil Phillip <cecilphillip@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tinydb = "^4.8.0"
fastapi = {extras = ["all"], version = "^0.109.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
