[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "podcastapi"
description = "Sample project for Visual Studio Code for Python Developers course"
version = "1.0"
authors = [{ name = "Brian Clark" }, { name = "Cecil Phillip" }]
requires-python = ">=3.11"

[project.urls]
course = "https://training.talkpython.fm/courses/visual-studio-code-for-python-developers"
repo = "https://github.com/talkpython/vscode-python-course"

# [project.scripts]
# podcastapi = "podcastapi.__main__:main"
